# cobble

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  docs-ci.yml  docs-pages.yml  java-ci.yml  java-multi-platform-jar.yml  rust-publish-crates.yml
0.1.0/: index.html
0.1.0/architecture/: block-cache.html  compaction.html  file-management.html  index.html  key-value-separation.html  lsm-tree.html  memtable.html  merge-operator.html  multi-volume.html  read-write-path.html  schema-evolution.html  snapshot.html
0.1.0/ffi-bindings/: index.html  java.html
0.1.0/getting-started/: basic-concepts.html  configuration.html  distributed.html  index.html  reader-and-scan.html  remote-compaction.html  single-db.html  structured-db.html
0.1.0/reference/: api-overview.html  configuration.html  index.html  monitoring.html
0.1.1/: index.html
0.1.1/architecture/: block-cache.html  compaction.html  file-management.html  index.html  lsm-tree.html  (+8 more)
0.2.0/: NOTICE  index.html
0.2.1/: README.md  index.html
cobble/: Cargo.toml  README.md  build.rs
cobble-bench/: Cargo.toml
cobble-bench/src/: main.rs
cobble-cli/: Cargo.toml  README.md
cobble-cli/src/: main.rs
cobble-cluster/: Cargo.toml
cobble-cluster/src/: lib.rs  standalone.rs
cobble-cluster/tests/: standalone_e2e_it.rs
cobble-common/: Cargo.toml
cobble-data-structure/: Cargo.toml  README.md
cobble-data-structure/src/: lib.rs  list.rs  priority_queue.rs  structured_db.rs  structured_read_only_db.rs  structured_reader.rs  structured_remote_compaction_server.rs  structured_scan.rs  structured_single_db.rs
cobble-java/: Cargo.toml
cobble-java/java/: .gitignore  pom.xml
cobble-java/java/src/main/java/io/cobble/: BatchIterator.java  CancelledError.java  CobbleCli.java  CobbleCliException.java  CobbleCliProcess.java  ColumnFamilyOptions.java  Config.java  CustomFileSystem.java  CustomFileSystemRegistry.java  CustomRandomAccessFile.java  CustomSequentialWriteFile.java  Db.java  DbCoordinator.java  DirectBufferPool.java  DirectColumns.java  DirectEncodedRow.java  DirectEncodedScanBatch.java  DirectEncodedScanEntry.java  DirectIoUtils.java  DirectScanBatch.java  DirectScanCursor.java  DirectScanEntry.java  GlobalSnapshot.java  Main.java  MergeOperatorType.java  NativeLoader.java  NativeObject.java  NativePlatform.java  NativeProfile.java  NullOutputStream.java  PendingSnapshot.java  ProcessFileSystemRequest.java  ProcessFileSystems.java  ReadOnlyDb.java  ReadOptions.java  Reader.java  ReusableDirectAddressInputStream.java  ScanBatch.java  ScanCursor.java  ScanOptions.java  (+11 more)
cobble-java/java/src/main/java/io/cobble/structured/: ColumnType.java  ColumnValue.java  Db.java  DirectBufferPool.java  DirectEncodedRow.java  DirectEncodedScanBatch.java  DirectEncodedScanRow.java  DirectListValueBuilder.java  DirectPriorityQueueBatch.java  DirectPriorityQueueEntry.java  DirectRow.java  DirectScanBatch.java  DirectScanCursor.java  DirectScanRow.java  ListConfig.java  ListRetainMode.java  PriorityQueue.java  ReadOptions.java  Row.java  ScanBatch.java  ScanCursor.java  ScanOptions.java  Schema.java  SingleDb.java  StructuredScanPlan.java  StructuredScanSplit.java  StructuredSchemaBuilder.java  WriteOptions.java
cobble-java/java/src/test/java/io/cobble/: CobbleCliJarIT.java  CobbleCliTest.java  DbBindingTest.java  NativeLoaderTest.java
cobble-java/java/src/test/java/io/cobble/structured/: StructuredDbTest.java
cobble-java/src/: coordinator.rs  db.rs  lib.rs  process_file_systems.rs  read_only_db.rs  read_options.rs  reader.rs  scan.rs  schema.rs  single_db.rs  snapshot_tools.rs  structured.rs  structured_db.rs  structured_read_options.rs  structured_scan_options.rs  structured_single_db.rs  structured_write_options.rs  util.rs  write_options.rs
cobble-web-monitor/: .gitignore  Cargo.toml  README.md  build.rs
cobble-web-monitor/src/: error.rs  lib.rs  server.rs
cobble-web-monitor/tests/: monitor_api_it.rs
cobble-web-monitor/web-ui/: index.html  package-lock.json  package.json  tailwind.config.js
cobble-web-monitor/web-ui/src/: App.vue  api.js  style.css  utils.js
cobble-web-monitor/web-ui/src/components/: AutoRefreshControl.vue  SideNav.vue
cobble-web-monitor/web-ui/src/pages/: InspectPage.vue  SnapshotsPage.vue
cobble/src/: block_cache.rs  config.rs  data_file.rs  db.rs  db_iter.rs  db_rescale.rs  db_restore.rs  db_state.rs  db_status.rs  error.rs  format.rs  governance.rs  key_codec.rs  lib.rs  lru.rs  lsm.rs  merge_operator.rs  paths.rs  read_only_db.rs  reader.rs  scan.rs  schema.rs  single_db.rs  snapshot_tool.rs  ttl.rs  type.rs  util.rs  vlog.rs  write_batch.rs  writer_options.rs
cobble/src/cache/: block.rs  mod.rs  preload.rs
cobble/src/compaction/: executor.rs  mod.rs  policy.rs  remote.rs  resilient.rs
cobble/src/coordinator/: config.rs  file.rs  mod.rs  node.rs
cobble/src/file/: file_manager.rs  file_system.rs  files.rs  metadata_io.rs  mod.rs  offload.rs  opendal_file.rs  opendal_fs.rs  posix_fs.rs
cobble/src/iterator/: bucket_filter.rs  column_masking.rs  deduplicating.rs  factory.rs  merging.rs  mock_iterator.rs  mod.rs  schema_evolving.rs  sorted_run.rs  truncation_filter.rs  vlog_seq_offset.rs
cobble/src/memtable/: hash.rs  iter.rs  manager.rs  mod.rs  skiplist.rs  vec.rs  vlog.rs
cobble/src/parquet/: file_adapter.rs  iterator.rs  meta.rs  mod.rs  writer.rs
cobble/src/snapshot/: manager.rs  manifest.rs  memtable.rs  mod.rs
cobble/src/sst/: compression.rs  format.rs  iterator.rs  mod.rs  row_codec.rs  writer.rs
cobble/tests/: db_it.rs  remote_compaction_resilience_it.rs  s3_roundtrip_it.rs  schema_evolution_it.rs
cobble/tests/testdata/: config.ini
docs/: README.md  _config.yml  index.md
latest/: README.md  index.html
scripts/: bump-all-versions.sh
src/: bytes_io.rs  config.rs  data_file.rs  db.rs  db_state.rs  error.rs  format.rs  governance.rs  lib.rs  lsm.rs  metrics_registry.rs  read_only_db.rs  read_proxy.rs  snapshot.rs  time.rs  ttl.rs  type.rs  write_batch.rs
template/: config.yaml
tests/: db_it.rs
(+270 files in other folders)
