[workspace]
resolver = "3"
members = [
    "cobble-bench",
    "cobble-cli",
    "cobble-cluster",
    "cobble",
    "cobble-java",
    "cobble-data-structure",
    "cobble-web-monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cobble-project/cobble"
homepage = "https://cobble-project.github.io/cobble/latest/"

[workspace.dependencies]
cobble = { path = "cobble", version = "0.1.0" }
cobble-data-structure = { path = "cobble-data-structure", version = "0.1.0" }
cobble-web-monitor = { path = "cobble-web-monitor", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "fat"
