[workspace]
resolver = "3"
members = [
    "cobble-bench",
    "cobble-cli",
    "cobble-cluster",
    "cobble",
    "cobble-java",
    "cobble-data-structure",
    "cobble-web-monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cobble-project/cobble"
homepage = "https://cobble-project.github.io/cobble/latest/"

[workspace.dependencies]
cobble = { path = "cobble", version = "0.1.0" }
cobble-data-structure = { path = "cobble-data-structure", version = "0.1.0" }
cobble-web-monitor = { path = "cobble-web-monitor", version = "0.1.0" }
bytes = "1.11.0"
log = "0.4.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serial_test = "3.3.1"
thiserror = "2.0.16"
tokio = "1.49.0"
uuid = { version = "1.18.0", features = ["v4"] }
size = { version = "0.5.0", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
