[package]
name = "cobble-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tools for Cobble storage engine"
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "kv", "storage"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
cobble = { workspace = true }
cobble-web-monitor = { workspace = true }
log = { workspace = true }
