[package]
name = "cobble-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tools for Cobble storage engine"
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "kv", "storage"]
categories = ["command-line-utilities", "database-implementations"]

[features]
default = []
storage-all = [
    "storage-alluxio",
    "storage-cos",
    "storage-ftp",
    "storage-hdfs",
    "storage-oss",
    "storage-s3",
    "storage-sftp",
]
storage-alluxio = ["cobble/storage-alluxio", "cobble-web-monitor/storage-alluxio"]
storage-cos = ["cobble/storage-cos", "cobble-web-monitor/storage-cos"]
storage-ftp = ["cobble/storage-ftp", "cobble-web-monitor/storage-ftp"]
storage-hdfs = ["cobble/storage-hdfs", "cobble-web-monitor/storage-hdfs"]
storage-oss = ["cobble/storage-oss", "cobble-web-monitor/storage-oss"]
storage-s3 = ["cobble/storage-s3", "cobble-web-monitor/storage-s3"]
storage-sftp = ["cobble/storage-sftp", "cobble-web-monitor/storage-sftp"]

[dependencies]
cobble = { workspace = true }
cobble-web-monitor = { workspace = true }
log = { workspace = true }
