[package]
name = "cobble-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cobble = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
uuid = { version = "1.18.0", features = ["v4"] }
