[package]
name = "cobble-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cobble = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
uuid = { workspace = true, features = ["v4"] }
