[package]
name = "cobble-data-structure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured data API wrappers for Cobble"
repository.workspace = true
homepage.workspace = true
keywords = ["kv", "schema", "storage"]
categories = ["database-implementations"]

[dependencies]
bytes = "1.11.0"
cobble = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[dev-dependencies]
uuid = { version = "1.18.0", features = ["v4"] }
