[package]
name = "cobble-data-structure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured data API wrappers for Cobble"
repository.workspace = true
homepage.workspace = true
keywords = ["kv", "schema", "storage"]
categories = ["database-implementations"]

[dependencies]
bytes = { workspace = true }
cobble = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
