[package]
name = "cobble-data-structure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured data API wrappers for Cobble"
repository.workspace = true
homepage.workspace = true
keywords = ["kv", "schema", "storage"]
categories = ["database-implementations"]

[features]
default = []
storage-all = [
    "storage-alluxio",
    "storage-cos",
    "storage-ftp",
    "storage-hdfs",
    "storage-oss",
    "storage-s3",
    "storage-sftp",
]
storage-alluxio = ["cobble/storage-alluxio"]
storage-cos = ["cobble/storage-cos"]
storage-ftp = ["cobble/storage-ftp"]
storage-hdfs = ["cobble/storage-hdfs"]
storage-oss = ["cobble/storage-oss"]
storage-s3 = ["cobble/storage-s3"]
storage-sftp = ["cobble/storage-sftp"]

[dependencies]
bytes = { workspace = true }
cobble = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
size = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
