[package]
name = "cobble-java"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "cobblejni"
crate-type = ["cdylib", "rlib"]

[dependencies]
cobble = { workspace = true }
cobble-data-structure = { workspace = true }
bytes = "1"
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
