[package]
name = "cobble-java"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "cobblejni"
crate-type = ["cdylib", "rlib"]

[dependencies]
cobble = { workspace = true }
cobble-data-structure = { workspace = true }
bytes = { workspace = true }
jni = "0.21"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
