[package]
name = "cobble-java"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "cobblejni"
crate-type = ["cdylib", "rlib"]

[features]
default = []
storage-all = [
    "storage-alluxio",
    "storage-cos",
    "storage-ftp",
    "storage-hdfs",
    "storage-oss",
    "storage-s3",
    "storage-sftp",
]
storage-alluxio = ["cobble/storage-alluxio", "cobble-data-structure/storage-alluxio"]
storage-cos = ["cobble/storage-cos", "cobble-data-structure/storage-cos"]
storage-ftp = ["cobble/storage-ftp", "cobble-data-structure/storage-ftp"]
storage-hdfs = ["cobble/storage-hdfs", "cobble-data-structure/storage-hdfs"]
storage-oss = ["cobble/storage-oss", "cobble-data-structure/storage-oss"]
storage-s3 = ["cobble/storage-s3", "cobble-data-structure/storage-s3"]
storage-sftp = ["cobble/storage-sftp", "cobble-data-structure/storage-sftp"]

[dependencies]
cobble = { workspace = true }
cobble-data-structure = { workspace = true }
bytes = { workspace = true }
jni = "0.21"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
size = { workspace = true }
