[package]
name = "cobble-web-monitor"
version.workspace = true
edition.workspace = true
build = "build.rs"
license.workspace = true
description = "Embeddable HTTP web monitor for Cobble databases"
repository.workspace = true
homepage.workspace = true
keywords = ["monitoring", "kv", "storage"]
categories = ["database-implementations"]

[features]
default = []
storage-all = [
    "storage-alluxio",
    "storage-cos",
    "storage-ftp",
    "storage-hdfs",
    "storage-oss",
    "storage-s3",
    "storage-sftp",
]
storage-alluxio = ["cobble/storage-alluxio"]
storage-cos = ["cobble/storage-cos"]
storage-ftp = ["cobble/storage-ftp"]
storage-hdfs = ["cobble/storage-hdfs"]
storage-oss = ["cobble/storage-oss"]
storage-s3 = ["cobble/storage-s3"]
storage-sftp = ["cobble/storage-sftp"]

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
cobble = { workspace = true }
include_dir = "0.7.4"
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "time"] }

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serial_test = { workspace = true }
size = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
