[package]
name = "cobble"
version.workspace = true
edition.workspace = true
build = "build.rs"
license.workspace = true
description = "A flexible embedded key-value storage engine for distributed systems as well as single-node applications."
repository.workspace = true
homepage.workspace = true
keywords = ["kv", "lsm", "storage"]
categories = ["database-implementations"]

[features]
default = []
storage-all = [
    "storage-alluxio",
    "storage-cos",
    "storage-ftp",
    "storage-hdfs",
    "storage-oss",
    "storage-s3",
    "storage-sftp",
]
storage-alluxio = ["opendal/services-alluxio"]
storage-cos = ["opendal/services-cos"]
storage-ftp = ["opendal/services-ftp"]
storage-hdfs = ["opendal/services-hdfs"]
storage-oss = ["opendal/services-oss"]
storage-s3 = ["opendal/services-s3"]
storage-sftp = ["opendal/services-sftp"]

[dependencies]
bytes = { workspace = true }
arc-swap = "1.7.1"
dashmap = "6.1.0"
foyer = "0.22.3"
log = { workspace = true, features = ["serde"] }
log4rs = "1.3.0"
metrics = "0.22.3"
opendal = { version = "0.54.0", default-features = false, features = ["services-fs"] }
rand = "0.8.5"
serial_test = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.7"
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
config = { version = "0.15.19", features = ["yaml", "ini"] }
serde_yaml = "0.9.34"
toml = "0.9.8"
tempfile = "3.20.0"
lz4_flex = { version = "0.13.0", default-features = false }
parquet = "58.0.0"

[target.'cfg(unix)'.dependencies]
positioned-io = "0.3.3"
